--- a/css/styles.css
+++ b/css/styles.css
@@ -85,8 +85,9 @@ nav {
 	font-size: 17px;
 	color: teal;
 	position: fixed;
-	background: url("../img/bg.png") gray;
+	background: url("../img/bg.png") white;
 	width:100%;
+	height: 135px;
 	top:left;
 	border-radius: 0 0 20px 20px;
 	vertical-align: middle;
@@ -161,10 +162,17 @@ color:lime;
 #logo{
 
 	text-align: center;
-	color: #0099FF;
+	color: white;
 	font-family: 'Rock Salt', sans-serif;
-	font-size:40px;
-	margin: 10px;
+	font-size:35px;
+	margin: 0 auto;
+	background: red;
+	opacity: 0.7;
+	width: 600px;
+	float: middle;
+	border-radius: 40px 40px 40px 40px;
+	box-shadow: 0px 0px 20px 3px #d3d3d3;
+	
 
 }
 
@@ -182,7 +190,8 @@ padding-top: 0px;
 padding-bottom: 20px;
 box-shadow: 0px 0px 20px 3px #d3d3d3;
 border-radius: 4px;
-background: #ffffff;
+background: url("../img/whitey.png") #F2F2F2;
+
 
 
 }
@@ -193,7 +202,7 @@ background: #ffffff;
 	font-size: 14px;
 	color: #404040;
 	margin: 0px;
-	background: url("../img/dark_wood.png") #29A9FF;
+	background: black;
 
 
 /*Below CSS code copied from http://stackoverflow.com/questions/114543/how-to-horizontally-center-a-div-in-a-div*/
