--- a/css/styles.css
+++ b/css/styles.css
@@ -35,21 +35,10 @@ h2{
 
 
 
-	width: 100%;
-	font-size: 2.5em;
-	font-weight: 300;
-	padding: 6px 20px 6px 70px;
-	margin: 30px 10px 10px -70px;
-	color: #555;
-	background-color: #999;
-	-webkit-box-shadow: 0px 2px 4px #888;
-	-moz-box-shadow: 0px 2px 4px #888;
-	box-shadow: 0px 2px 4px #888;
-
+color: black;
+font-size:30px;
 font-family: 'Open Sans Condensed', sans-serif;
-
-
-
+font-weight: 300;
 
 }
 
@@ -94,6 +83,8 @@ ul {
 p{
 
 	line-height: 36px;
+	font-family: 'Montserrat', sans-serif;
+
 
 }
 	
@@ -184,7 +175,7 @@ color:lime;
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-size:55px;
 	margin: 0 auto;
-	background: red;
+	background: #3399FF;
 	opacity: 0.7;
 	width: 600px;
 	float: middle;
@@ -287,10 +278,62 @@ margin:40px 20px 10px 0;
 background-color: black;
 border-radius: 3px 40px 40px 3px;
 box-shadow: 0px 0px 20px 3px #d3d3d3;
-color: #3399FF;
+color: black;
 padding-left: 20px;
 margin-left:-30px;
-opacity: 0.3;
+background: -webkit-linear-gradient(left, white , #3399FF); /* For Safari 5.1 to 6.0 */
+background: -o-linear-gradient(right, white, #3399FF); /* For Opera 11.1 to 12.0 */
+background: -moz-linear-gradient(right, white, #3399FF); /* For Firefox 3.6 to 15 */
+background: linear-gradient(to right, white , #3399FF); /* Standard syntax */
+
+
+}
+
+#title_cust2{
+
+background-color: black;
+border-radius: 3px 40px 40px 3px;
+box-shadow: 0px 0px 20px 3px #d3d3d3;
+color: lime;
+padding-left: 20px;
+margin-left:-30px;
+background: -webkit-linear-gradient(left, black , lime); /* For Safari 5.1 to 6.0 */
+background: -o-linear-gradient(right, black, lime); /* For Opera 11.1 to 12.0 */
+background: -moz-linear-gradient(right, black, lime); /* For Firefox 3.6 to 15 */
+background: linear-gradient(to right, black , lime); /* Standard syntax */
+
+
+}
+
+#title_cust3{
+
+background-color: black;
+border-radius: 3px 40px 40px 3px;
+box-shadow: 0px 0px 20px 3px #d3d3d3;
+color: crimson;
+padding-left: 20px;
+margin-left:-30px;
+background: -webkit-linear-gradient(left, black , crimson); /* For Safari 5.1 to 6.0 */
+background: -o-linear-gradient(right, black, crimson); /* For Opera 11.1 to 12.0 */
+background: -moz-linear-gradient(right, black, crimson); /* For Firefox 3.6 to 15 */
+background: linear-gradient(to right, black , crimson); /* Standard syntax */
+
+
+}
+
+#title_cust4{
+
+background-color: black;
+border-radius: 3px 40px 40px 3px;
+box-shadow: 0px 0px 20px 3px #d3d3d3;
+color: #FFD119;
+padding-left: 20px;
+margin-left:-30px;
+background: -webkit-linear-gradient(left, black , #FFD119); /* For Safari 5.1 to 6.0 */
+background: -o-linear-gradient(right, black, #FFD119); /* For Opera 11.1 to 12.0 */
+background: -moz-linear-gradient(right, black, #FFD119); /* For Firefox 3.6 to 15 */
+background: linear-gradient(to right, black , #FFD119); /* Standard syntax */
+
 
 }
 
@@ -308,18 +351,22 @@ margin-top:20px;
 /*blockquote*/
 
 blockquote {
-  background: #f9f9f9;
+  background: gold;
   border-left: 10px solid #0099FF;
   margin: 1.5em 10px;
   padding: 0.5em 10px;
   quotes: "\201C""\201D""\2018""\2019";
+  
 }
 
 blockquote p {
   display: inline;
 }
 
+aside{
 
+
+}
 
 
 
