--- a/css/styles.css
+++ b/css/styles.css
@@ -395,3 +395,66 @@ blockquote p {
 section {
 	margin: 20px 0;
 } 
+
+
+/* =========
+
+Media Queries
+
+=========*/
+
+
+
+/*Tablet Size*/
+@media screen and (max-width: 900px) {
+
+
+ nav{
+
+
+  font-size:  1.3em;
+ } 
+
+h1{
+
+font-size: 7em;
+
+}
+
+h2{
+
+margin-top: 15%%;
+
+}
+
+}
+
+
+/*Mobile Size*/
+@media screen and (max-width: 480px) {
+
+
+
+  .banner {
+
+    margin-top: 20%;
+
+  }
+
+  } 
+
+
+  h1{
+
+    font-size:  5em;
+
+  }
+
+  h2{
+
+  margin-top: 20%;
+
+  }
+
+
+}
